--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ project.ext {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/org.glassfish/javax.json
+    testImplementation group: 'org.glassfish', name: 'javax.json', version: '1.0.4'
+
+    testImplementation 'javax.json:javax.json-api:1.0'
     testImplementation "com.github.tomakehurst:wiremock-jre8:2.25.1"
     testImplementation 'io.cucumber:cucumber-java:' + cucumberVersion
     testImplementation 'io.cucumber:cucumber-junit:' + cucumberVersion
